# blackterm-platform

./: .gitignore  CAPTURE-GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FILES.txt  GITHUB_UPLOAD.md  GRAPH-RENDERED-HOTFIX-README.txt  INSTALL-DRAG-AND-DROP.txt  INSTALL-UPDATED-FILES.txt  INSTALL.md  INSTALL.txt  LICENSE  PACKAGE-MANIFEST.txt  README-AUTONOMOUS-INVESTIGATION-v6.2.txt  README-CVE-ATLAS-v10.6.md  README-CVE-ATLAS.txt  README-GALLERY.md  README-GLOBAL-INTELLIGENCE-MAP-v6.3.txt  README-GLOBAL-MAP-3.0.txt  README-GRAPH-EXPLORER-v7.3.txt  README-INSTALL.txt  README-MISSION-CONTROL-UPDATE.txt  README-RELATIONSHIP-GRAPH-v7.1.txt  README-RELATIONSHIP-GRAPH-v7.2.txt  README-SIDEBAR-UPDATE.txt  README-VISUAL-IDENTITY-v10.8.md  README-VULNERABILITY-INTELLIGENCE-v10.7.md  README-v10-BLACKTERM-X.md  README-v10.1-GRAPH-UPGRADE.md  README-v10.2-AI-ANALYST.md  README-v10.3-AI-ANALYST-V2.md  README-v10.4-CONVERSATIONAL-AI.md  README-v10.5-AI-EXPERIENCE.md  README-v11.0.md  README-v9-UPGRADE.md  README-v9.1-UPGRADE.md  README.md  README_SNIPPET.md  ROADMAP.md  RUN_BLACKTERM.bat  (+10 more)
assets/: project-stats.json
blackterm_recon/: __init__.py  assistant_engine.py  attack_surface.py  autonomous_workflow.py  banner.py  case_completeness.py  case_reporting.py  cli.py  config.py  correlation_engine.py  database.py  engine.py  exceptions.py  fingerprint_signatures.py  fingerprinting.py  graph_model.py  investigation_engine.py  logging_setup.py  models.py  operations.py  operator_dashboard.py  platform_sdk.py  ports.py  profiles.py  relationship_graph.py  reporting.py  resolver.py  (+3 more)
(+134 files in other folders)
