[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackterm-recon"
version = "5.6.0"
description = "BLACKTERM // RECON desktop network visibility application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tyler Deppa"}]
dependencies = [
    "psutil>=5.9",
    "PySide6>=6.8,<7",
    "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
blackterm = "blackterm_recon.cli:main"
blackterm-desktop = "blackterm_recon.desktop.app:main"

[tool.setuptools.packages.find]
include = ["blackterm_recon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
